# sysctl-mutator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  weekly.yml
docs/: configuration.md  use-cases.md
k8s/: deployment.yaml  rbac.yaml  webhook-config.yaml
k8s/charts/sysctl-mutator/: Chart.yaml  values.yaml
k8s/charts/sysctl-mutator/templates/: _helpers.tpl  certs.yaml  deployment.yaml  rbac.yaml  service.yaml  webhook-config.yaml
scripts/: bump-version.sh  generate-certs.sh
src/: config.rs  main.rs  webhook.rs
