[package]
name = "sysctl-mutator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
futures = "0.3"
kube = { version = "3.1", features = ["client", "runtime", "derive", "admission"] }
k8s-openapi = { version = "0.27", features = ["v1_31"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-patch = "4.2"
mimalloc = "0.1"
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
pedantic = "warn"
perf = "warn"
