[package]
name = "sysctl-mutator"
version = "1.0.4"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
futures = "0.3"
kube = { version = "3.1", features = ["client", "runtime", "derive", "admission"] }
k8s-openapi = { version = "0.27", features = ["v1_31"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-patch = "4.2"
mimalloc = "0.1"
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }
prometheus = { version = "0.13", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
# -----------------------------------------------------------------------------
# Blanket Groups (Keep at warn to avoid breaking builds on style/experimental lints)
# -----------------------------------------------------------------------------
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# -----------------------------------------------------------------------------
# Strict Panic & Error Handling Prevention (Absolute Deny)
# -----------------------------------------------------------------------------
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

# -----------------------------------------------------------------------------
# Safe Casting & Math Upgrades (Bypasses dangerous LLM type shortcuts)
# -----------------------------------------------------------------------------
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny" # Upgraded from pedantic
float_cmp = "deny"           # Prevents exact equality checks (==) on floats

# -----------------------------------------------------------------------------
# Code Quality, Safety & Explicit Idioms
# -----------------------------------------------------------------------------
enum_glob_use = "deny"        # Forces explicit imports instead of `use MyEnum::*`
implicit_clone = "deny"       # Catches hidden, expensive clones
explicit_iter_loop = "deny"   # Forces proper loop idiomatics
index_refutable_slice = "deny"# Catches risky direct slice/vec indexing
manual_string_new = "deny"    # Upgraded from pedantic

# -----------------------------------------------------------------------------
# Documentation & Consistency Guardrails
# -----------------------------------------------------------------------------
missing_errors_doc = "deny"           # Upgraded from pedantic; forces documentation of Result errors
missing_panics_doc = "deny"           # Upgraded from pedantic; forces documentation if a function can panic
derive_partial_eq_without_eq = "deny" # Upgraded from nursery; catches structural derive inconsistencies
